# Finance_programming

./: README.md  pyf_1_python_programming.ipynb  pyf_2_backtesting.ipynb  pyf_2_graphics.ipynb  pyf_2_pandas.ipynb  pyf_2_yfinance.ipynb  pyf_3_math_1.ipynb  pyf_4_mean_variance_analysis.ipynb  pyf_5_time_series.ipynb  pyf_6_options.ipynb  pyf_8_machine_learning_tutorial.ipynb  pyf_x_futures_prices.ipynb  pyproject.toml
ch1_python_programming/: pyf_1_python_programming.ipynb
ch2/: debut_of_quant.py
ch2_Debut_of_Quantitative_Research/: 2330tw.xlsx  pyf_2_backtesting.ipynb  pyf_2_debut_of_quant.ipynb  pyf_2_technical_analysis.ipynb
ch3_Selected_Mathematical_Tools/: pyf_3_math_2.ipynb
ch4_Modern_Portfolio_Theory/: pyf_4_CAPM.ipynb  pyf_4_factor_models.ipynb
ch5_Financial_Time_Series_Analysis/: pyf_5_granger_causality.ipynb  pyf_5_structural_break.ipynb
